# Mimics @bazel_tools/src/conditions:windows
config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "windows_debug",
    constraint_values = ["@platforms//os:windows"],
    values = {
        "compilation_mode": "dbg",
    },
    visibility = ["//visibility:public"],
)

# Mimics @bazel_tools/src/conditions:windows_arm64
config_setting(
    name = "windows_arm64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    values = {"cpu": "x64_arm64_windows"},
)

config_setting(
    name = "windows_arm64_debug",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    values = {
        "compilation_mode": "dbg",
        "cpu": "x64_arm64_windows",
    },
    visibility = ["//visibility:public"],
)

# Mimics @bazel_tools/src/conditions:linux_x86_64
config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_x86_64_debug",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    values = {
        "compilation_mode": "dbg",
    },
    visibility = ["//visibility:public"],
)

# Mimics @bazel_tools/src/conditions:darwin
config_setting(
    name = "osx",
    constraint_values = ["@platforms//os:macos"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "osx_debug",
    constraint_values = ["@platforms//os:macos"],
    values = {
        "compilation_mode": "dbg",
    },
    visibility = ["//visibility:public"],
)

# Custom definitions

# Linux - 64-bit arm
config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "linux_arm64_debug",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    values = {
        "compilation_mode": "dbg",
    },
    visibility = ["//visibility:public"],
)
