load("@bazel_skylib//lib:selects.bzl", "selects")

selects.config_setting_group(
    name = "is_cross_compiler",
    match_any = [
        "//constraints/is_roborio:roborio",
        "//constraints/is_bullseye32:bullseye32",
        "//constraints/is_bullseye64:bullseye64",
        "//constraints/is_raspi32:raspi32",
    ],
)

selects.config_setting_group(
    name = "is_unix",
    match_any = [
        ":is_cross_compiler",
        "@bazel_tools//src/conditions:darwin",
        "@bazel_tools//src/conditions:linux_x86_64",
    ],
)

selects.config_setting_group(
    name = "is_linux",
    match_any = [
        ":is_cross_compiler",
        "@bazel_tools//src/conditions:linux_x86_64",
    ],
)
