constraint_setting(
    name = "is_bullseye64",
    default_constraint_value = ":false",
)

constraint_value(
    name = "true",
    constraint_setting = ":is_bullseye64",
    visibility = ["//visibility:public"],
)

constraint_value(
    name = "false",
    constraint_setting = ":is_bullseye64",
)

config_setting(
    name = "bullseye64",
    constraint_values = [":true"],
    visibility = ["//visibility:public"],
)

config_setting(
    name = "bullseye64_debug",
    constraint_values = [":true"],
    values = {
        "compilation_mode": "dbg",
    },
    visibility = ["//visibility:public"],
)
